added call function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
-      <a href="#">Services</a>
+      <a href="#Internet">Services</a>
       <a href="#">Contact</a>
     </nav>
 
@@ -19,10 +19,15 @@
       <p>
         We offer Internet as well as Cable T.V. Services at Affordable Rates.
       </p>
-      <a href="https://goo.gl/maps/jsJNbZsn6VBWyYiw8" class="btn">Locate us</a>
+      <a
+        target="_blank"
+        href="https://goo.gl/maps/jsJNbZsn6VBWyYiw8"
+        class="btn"
+        >Locate us</a
+      >
     </header>
 
-    <div class="container">
+    <div class="container" id="Internet">
       <div class="card">
         <h2>Internet Plans</h2>
         <p>High Speed and Reliable Internet with 24*7 available maintenance.</p>
@@ -45,7 +50,7 @@
     <div class="cta">
       <h2>Ready for experiencing uninterupted entertainment</h2>
       <p>Reach out to us by calling us right away</p>
-      <a href="#" class="button">Contact Us</a>
+      <a href="tel:9422259415" class="button">Contact Us</a>
     </div>
 
     <footer>
