--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
+      <a href="#about">About</a>
       <a href="#Internet">Services</a>
-      <a href="#">Contact</a>
+      <a href="#">Enquiry</a>
     </nav>
 
     <header>
       <h1>Welcome to MultiLink Satvision</h1>
       <p>
-        We offer Internet as well as Cable T.V. Services at Affordable Rates.
+         We offer Internet as well as Cable T.V. Services at Affordable Rates. 
       </p>
       <a
         target="_blank"
@@ -45,6 +45,13 @@
         <p>Internet + Cable Recharges available at affordable cost.</p>
         <a href="#" class="button">Learn More</a>
       </div>
+    </div>
+
+    <div class="about" id="about">
+      <h2>Owner: Amol Sonawane</h2>
+      <p><Address>Bunglow No. 09, Saptarushi Society, Durga Nagar, <br>Near New R.T.O. Office, Peth Road,Nashik, 422004</Address></p>
+      <p><a href="mailto:amolsonawane315@gmail.com" target="_blank"> <i>Enquiry: amolsonawane315@gmail.com </i></a></p>
+      <img src="images/img1.jpg" />
     </div>
 
     <div class="cta">
