--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a href="#">Home</a>
       <a href="#about">About</a>
       <a href="#Internet">Services</a>
-      <a href="#">Enquiry</a>
+      <a href="./form.html" target="_blank">Enquiry</a>
     </nav>
 
     <header>
