--- a/form.html
+++ b/form.html
@@ -30,14 +30,22 @@
         <textarea id="message" name="message" required></textarea>
       </div>
       <div class="form-row">
-        <label for="plans">Choose a Plan:</label>
-        <select>
+        <label for="plans">Choose a Domain:</label>
+        <select id="package">
           <option value="Internet">Internet</option>
           <option value="T.V. Cable">T.V Cable</option>
           <option value="Combo Plans">Combo Plans</option>
         </select>
       </div>
-      <button type="submit">Send Enquiry</button>
+      <div class="form-row">
+        <label for="plans">Choose a Plan:</label>
+        <select id="plan">
+          <option value="Zero">--Select--</option>
+          <option value="One">Select Package First</option>
+        </select>
+      </div>
+      <button type="submit" class="button">Send Enquiry</button>
     </form>
+    <script src="forms.js"></script>
   </body>
 </html>
