--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="card">
         <h2>Internet Plans</h2>
         <p>High Speed and Reliable Internet with 24*7 available maintenance.</p>
-        <a href="#" class="button">Learn More</a>
+        <a href="./plans.html" class="button" target="_blank">Learn More</a>
       </div>
       <div class="card">
         <h2>Cable Plans</h2>
@@ -63,5 +63,6 @@
     <footer>
       <p>&copy; MultiLink Satvision Pvt Ltd. All rights reserved.</p>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
